--- a/2010s/index.html
+++ b/2010s/index.html
@@ -7,52 +7,91 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<nav>
-		<a href="../">Home</a>
-		<a href="../1990s">1990s</a>
-		<a href="../2000s">2000s</a>
-		<a href="./">2010s</a>
-		<a href="" target="_blank">Original article</a>
-		<a href="https://github.com/gabrieldrozdov/time-traveler" target="_blank">GitHub repository (update with your repository)</a>
-	</nav>
+	
+	<style>
+* {
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+}
 
-	<h1>Welcome to the 2010s!</h1>
 
-	<button onclick="toggleContent();">The 2010s? What’s that like?</button>
 
-	<div id="content" class="hidden">
-		<p>
-			This is an era where the Internet becomes everything. It takes on new functions and allows layouts that appease our every want and need. Perhaps by now, we’ve had <em>too</em> much Internet.
-		</p>
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-width: 100vh;
+	background:black;
 
-		<p>
-			Here’s what sites have now:
-		</p>
+}
 
-		<ul>
-			<li>Advanced layouts using <a href="https://www.joshwcomeau.com/css/interactive-guide-to-flexbox/" target="_blank">flexbox</a> and <a href="https://www.joshwcomeau.com/css/interactive-guide-to-grid/" target="_blank">CSS grid</a>.</li>
-			<li><a href="https://www.w3schools.com/css/css_rwd_mediaqueries.asp" target="_blank">Media queries</a> that let us create responsive mobile layouts.</li>
-			<li><a href="https://www.w3schools.com/cssref/atrule_font-face.php" target="_blank">Custom fonts.</a></li>
-			<li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS/font-variation-settings" target="_blank">Variable fonts!.</a></li>
-			<li>All the wonders that JavaScript brings.</li>
-		</ul>
+.container{
+	
+	display: flex;
+	justify-content: center;
+	align-items: center;
+    flex-wrap: wrap;
+}
 
-		<p>
-			For this version of the site, <em>you may NOT use absolute positioning!</em>
-		</p>
 
-		<p>
-			If flexbox is confusing, try playing <a href="https://flexboxfroggy.com/" target="_blank">Flexbox Froggy</a>. If CSS Grid is confusing, try playing <a href="https://cssgridgarden.com/" target="_blank">Grid Garden</a>.
-		</p>
+.container .card
+{
+position:relative;
+width: 1500px;
+height: 1500px;
+background:rgb(44, 43, 43);
+border-radius: 20px;
+overflow:hidden;
+}
 
-		<h2>Examples of sites that are evocative this era:</h2>
-		<ul>
-			<li><a href="https://www.apple.com/" target="_blank">Apple</a></li>
-			<li><a href="https://www.reddit.com/" target="_blank">Reddit</a></li>
-			<li><a href="https://www.nytimes.com/" target="_blank">New York Times</a></li>
-		</ul>
+.container .card::before
+{
+	content:'';
+	position: absolute;
+	top: var(--y);
+	left: var(--x);
+	transform:translate(-50%,-50%);
+	background:radial-gradient(var(--clr),transparent,transparent);
+	width:900px;
+	height:900px;
+	opacity: 0;
+	transition: 0.5s,top: 0s,left:0s;
+}
+.container .card:hover::before
+{
+	opacity: 1;
+}
+nav
+{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 0%;	
+}
+
+	</style>
+
+
+<br>
+
+	<div class="container">
+		
+	<div class="card" style="--clr:#ff0;"></div>
 	</div>
 
-	<script src="script.js"></script>
+<script>
+	let cards= document.querySelectorAll('.card')
+	cards.forEach(card => {
+		card.onmousemove = function(glow){
+			let x= glow.pageX- card.offsetLeft;
+			let y=glow.pageY- card.offsetTop;
+
+			card.style.setProperty('--x',x+ 'px');
+			card.style.setProperty('--y',y+ 'px');
+		}
+		
+	});
+</script>
 </body>
 </html>
