--- a/index.html
+++ b/index.html
@@ -1,72 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>TIME TRAVELER</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>TIME TRAVELER | Home</title>
+  <link rel="stylesheet" href="https://use.typekit.net/xvl8ddx.css">
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      background-color: black;
+      color: white;
+      font-family: "pf-videotext", sans-serif;
+      overflow-x: hidden;
+    }
+
+    h1 {
+      position: absolute;
+      top: 100px;
+      left: 100px;
+      font-size: clamp(3rem, 8vw, 7rem);
+      color: yellow;
+      text-shadow: 0 0 8px #ff00d4;
+    }
+
+    .subtext {
+      position: absolute;
+      top: 250px;
+      left: 100px;
+      font-size: clamp(1rem, 2vw, 1.5rem);
+      font-family: 'Courier New', monospace;
+      color: white
+    }
+
+    .nav-links {
+      position: absolute;
+      top: 400px;
+      left: 100px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    .nav-links a {
+      text-decoration: none;
+      color: black;
+      background-color: yellow;
+      border: 2px solid yellow;
+      border-radius: 50px;
+      padding: 15px 30px;
+      font-size: 1.2rem;
+      font-family: 'Courier New', Courier, monospace;
+     
+      transition: all 0.2s ease;
+    }
+
+    .nav-links a:hover {
+      background-color: black;
+      color: yellow;
+      border-color: #ff00d4;
+    }
+
+    
+
+    .rectangle {
+      position: absolute;
+      background-color: #00fff7;
+      opacity: 0.2;
+      width: 500px;
+      height: 150px;
+      top: 320px;
+      left: 300px;
+      z-index: 0;
+      transform: rotate(6deg);
+    }
+
+    .rectangle2 {
+      position: absolute;
+      background-color: #ff00aa;
+      opacity: 0.2;
+      width: 600px;
+      height: 200px;
+      top: 200px;
+      left: 400px;
+      z-index: 0;
+      transform: rotate(-3deg);
+    }
+  </style>
 </head>
 <body>
-	<nav>
-		<a href="./">Home</a>
-		<a href="1990s/">1990s</a>
-		<a href="2000s/">2000s</a>
-		<a href="2010s/">2010s</a>
-		<a href="" target="_blank">Original article</a>
-		<a href="https://github.com/gabrieldrozdov/time-traveler" target="_blank">GitHub repository (update with your repository)</a>
-	</nav>
 
-	<h1>Time Traveler</h1>
-	<p>A project by YOU</p>
+  <h1>TIME TRAVELER</h1>
+  <div class="subtext">Explore the article "The handmade web" by J.R Carpenter through the decades —<br>With Html, CSS absolute and CSS Flex!</div>
 
-	<p>
-		We’re going to travel through time. For this project, pick an article that discusses something relating to the Internet. Then, create your own coded version of that article to match the styles and technologies of three different eras:
-	</p>
-	<ul>
-		<li><a href="1990s/">The late 1990s</a></li>
-		<li><a href="2000s/">The 2000s</a></li>
-		<li><a href="2010s/">The 2010s</a></li>
-	</ul>
+  <div class="nav-links">
+    <a href="1990s/"> Enter the 1990s</a>
+    <a href="2000s/">Enter the 2000s</a>
+    <a href="2010s/"> Enter the 2010s</a>
+    <a href="https://luckysoap.com/statements/handmadeweb.html">Original Article!</a>
+		<a href="https://github.com/Manajo22/time-traveller" target="_blank">GitHub repository</a>
+   
+  
+  </div>
+<div class="rectangle"></div>
+<div class="rectangle2"></div>
 
-	<p>
-		<strong>Make sure you customize this page too!</strong> <a href="https://yanshangyun.github.io/type-code/time-traveller/" target="_blank">Here’s an example of a finished version of this project.</a>
-	</p>
+  
 
-	<p>
-		Clone <a href="https://github.com/gabrieldrozdov/time-traveler" target="_blank">this repository</a> and use it as a template for your project. Follow <a href="https://babysteps.gdwithgd.com/" target="_blank">Baby Steps</a> to learn how to create your own GitHub repository and launch your site on GitHub Pages.
-	</p>
-
-	<p style="font-size: 24px;">
-		<strong>🤖 NO AI ALLOWED!!!</strong>
-	</p>
-
-	<h2>
-		Suggestions for articles about the Internet:
-	</h2>
-
-	<ul>
-		<li><a href="https://luckysoap.com/statements/handmadeweb.html" target="_blank">A handmade web</a></li>
-		<li><a href="https://www.theverge.com/c/24247055/2004-tech-internet-gadgets-phones-pop-culture" target="_blank">2005 was the first year of the future</a></li>
-		<li><a href="https://www.bloomberg.com/graphics/2015-paul-ford-what-is-code/" target="_blank">What Is Code?</a></li>
-		<li><a href="https://thecreativeindependent.com/essays/laurel-schwulst-my-website-is-a-shifting-house-next-to-a-river-of-knowledge-what-could-yours-be/" target="_blank">My website is a shifting house next to a river of knowledge. What could yours be?</a></li>
-		<li><a href="https://designingfriction.com/" target="_blank">Designing Friction</a></li>
-		<li><a href="https://www.theverge.com/c/23998379/google-search-seo-algorithm-webpage-optimization" target="_blank">The Perfect Webpage</a></li>
-		<li><a href="https://www.are.na/search?q=%7B%22term%22%3A%7B%22facet%22%3A%22web+readings%22%7D%2C%22where%22%3A%5B%7B%22facet%22%3A%22ALL%22%7D%5D%2C%22what%22%3A%7B%22facets%22%3A%5B%22CHANNEL%22%5D%7D%2C%22fields%22%3A%7B%22facets%22%3A%5B%22ALL%22%5D%7D%2C%22order%22%3A%7B%22facet%22%3A%22SCORE%22%2C%22dir%22%3A%22DESC%22%7D%7D" target="_blank">A whole bunch of things from Are.na</a></li>
-	</ul>
-
-	<h2>
-		Timeline
-	</h2>
-	
-	<ul>
-		<li>Week 5, 3/18 — Project introduced</li>
-		<li>NO CLASS, 3/27 — Work on 1990s and 2000s sites</li>
-		<li>Week 6, 4/1 — 1990s and 2000s sites due</li>
-		<li>Week 7, 4/8 — First draft of 2010s site due</li>
-		<li>Week 8, 4/15 — 2010s site due</li>
-	</ul>
-
-	<p>
-		This project is inspired by the <a href="https://csszengarden.com/" target="_blank">CSS Zen Garden</a>.
-	</p>
 </body>
 </html>
