--- a/2010s/index.html
+++ b/2010s/index.html
@@ -29,7 +29,7 @@
 	
 	<section class="intro">
 		<div class="intro-text">
-			<h1>The handmade web</h1>
+			<h1>A handmade web</h1>
 			<p>Presented at: <br>
 				Slow Media, Thursday 26th March 2015, Bath Spa University, UK<br>
 				TIMES AND TEMPORALITIES OF THE WEB, 1-3 december 2015, CNRS/Paris-Sorbonne/UPMC, Paris. France<br>
