--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>TIME TRAVELER | Home</title>
+  <title>TIME TRAVELLER | Home</title>
   <link rel="stylesheet" href="https://use.typekit.net/xvl8ddx.css">
   <style>
     * {
@@ -95,8 +95,8 @@
 </head>
 <body>
 
-  <h1>TIME TRAVELER</h1>
-  <div class="subtext">Explore the article "The handmade web" by J.R Carpenter through the decades —<br>With Html, CSS absolute and CSS Flex!</div>
+  <h1>TIME TRAVELLER</h1>
+  <div class="subtext">Explore the article "A handmade web" by J.R Carpenter through the decades —<br>With Html, CSS absolute and CSS Flex!</div>
 
   <div class="nav-links">
     <a href="1990s/"> Enter the 1990s</a>
